added notebook for valuation of equivalent fixed price swing

--- a/Test/Compare/compare.ipynb
+++ b/Test/Compare/compare.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "FixedPriceSwing [buy, EUR]: market=TTF, type=call,start_date=01-Mar-2017, end_date=20-Mar-2017\n",
-      "# constraints=SwingConstraints(_dcq_min=0.0, _tcq_min=1.0, _tcq_max=1.0, _dcq_max=1.0)\n",
+      "# constraints=SwingConstraints(_dcq_min=0.0, _tcq_min=0.0, _tcq_max=1.0, _dcq_max=1.0)\n",
       "# strike=\n",
       "2017-03-01    25.5\n",
       "2017-03-02    25.5\n",
@@ -154,7 +154,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 26.09016994,  26.09016994,  28.87785252,  31.09016994,\n",
+       "        32.51056516,  33.        ,  32.51056516,  31.09016994,\n",
+       "        28.87785252,  26.09016994,  23.        ,  19.90983006,\n",
+       "        17.12214748,  14.90983006,  13.48943484,  13.        ,\n",
+       "        13.48943484,  14.90983006,  17.12214748,  19.90983006,  23.        ])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux = 23.0 + 10.0 * np.sin(2. * np.pi * np.arange(1, 21) / 20);\n",
+    "# pd.Series(aux[0:1] + aux, \n",
+    "#                index=pd.date_range(valuation_date, pd.datetime(2017, 3, 20)))\n",
+    "np.concatenate((aux[0:1], aux))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +191,10 @@
    "source": [
     "valuation_date = pd.datetime(2017, 2, 28)\n",
     "\n",
-    "fc = pd.Series(25.5, index=pd.date_range(valuation_date, pd.datetime(2017, 3, 20)))\n",
+    "aux = 23.0 + 10.0 * np.sin(2. * np.pi * np.arange(1, 21) / 20);\n",
+    "aux = np.concatenate((aux[0:1], aux));\n",
+    "# fc = pd.Series(25.5, index=pd.date_range(valuation_date, pd.datetime(2017, 3, 20)))\n",
+    "fc = pd.Series(aux, index=pd.date_range(valuation_date, pd.datetime(2017, 3, 20)))\n",
     "\n",
     "fc.loc[pd.datetime(2017, 3, 7)] = 33.6\n",
     "fc.loc[pd.datetime(2017, 3, 14)] = 33.6\n",
@@ -188,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -208,51 +240,51 @@
       "## TTF\n",
       "- vol_params: IdentityData: data_args={'data_type': <type 'object'>}, data:\n",
       "{'offset': 14}\n",
-      "- vol_model: VolModelFunction: vol_kwargs={'builder': 'default', 'calibrator': None}, vol_class=<class 'gazprom.mt.pricing.models.timeseries.gbmsimulator.volatility_model.VolModelBlended'>, market_data=<gazprom.mt.pricing.models.timeseries.market_data.MonthlyBlendedData object at 0x000000000D18E0B8>, builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000D617EF0>, data_args={}, data:\n",
+      "- vol_model: VolModelFunction: vol_kwargs={'builder': 'default', 'calibrator': None}, vol_class=<class 'gazprom.mt.pricing.models.timeseries.gbmsimulator.volatility_model.VolModelBlended'>, market_data=<gazprom.mt.pricing.models.timeseries.market_data.MonthlyBlendedData object at 0x000000000CFE38D0>, builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000CFE3550>, data_args={}, data:\n",
       "(KeySpec(key_type=pricing_date, apply_early=False, key=_STATE), KeySpec(key_type=vol_monthly, apply_early=False, key=TTF), KeySpec(key_type=vol_blended, apply_early=False, key=TTF), KeySpec(key_type=option_expiry, apply_early=False, key=TTF), KeySpec(key_type=vol_params, apply_early=False, key=TTF))\n",
-      "- price: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000CE8FD68>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
-      "2017-02-28    25.5\n",
-      "2017-03-01    25.5\n",
-      "2017-03-02    25.5\n",
-      "2017-03-03    25.5\n",
-      "2017-03-04    25.5\n",
-      "2017-03-05    25.5\n",
-      "2017-03-06    25.5\n",
-      "2017-03-07    33.6\n",
-      "2017-03-08    25.5\n",
-      "2017-03-09    25.5\n",
-      "2017-03-10    25.5\n",
-      "2017-03-11    25.5\n",
-      "2017-03-12    25.5\n",
-      "2017-03-13    25.5\n",
-      "2017-03-14    33.6\n",
-      "2017-03-15    25.5\n",
-      "2017-03-16    25.5\n",
-      "2017-03-17    25.5\n",
-      "2017-03-18    25.5\n",
-      "2017-03-19    33.6\n",
-      "2017-03-20    25.5\n",
+      "- price: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000C758780>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
+      "2017-02-28    26.090170\n",
+      "2017-03-01    26.090170\n",
+      "2017-03-02    28.877853\n",
+      "2017-03-03    31.090170\n",
+      "2017-03-04    32.510565\n",
+      "2017-03-05    33.000000\n",
+      "2017-03-06    32.510565\n",
+      "2017-03-07    33.600000\n",
+      "2017-03-08    28.877853\n",
+      "2017-03-09    26.090170\n",
+      "2017-03-10    23.000000\n",
+      "2017-03-11    19.909830\n",
+      "2017-03-12    17.122147\n",
+      "2017-03-13    14.909830\n",
+      "2017-03-14    33.600000\n",
+      "2017-03-15    13.000000\n",
+      "2017-03-16    13.489435\n",
+      "2017-03-17    14.909830\n",
+      "2017-03-18    17.122147\n",
+      "2017-03-19    33.600000\n",
+      "2017-03-20    23.000000\n",
       "Freq: D, dtype: float64\n",
-      "- vol_monthly: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000D1E4748>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
+      "- vol_monthly: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000C72C3C8>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
       "2017-01-01    0.21\n",
       "2017-02-01    0.21\n",
       "2017-03-01    0.21\n",
       "2017-04-01    0.21\n",
       "Freq: MS, dtype: float64\n",
-      "- vol_blended: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000D1E4EB8>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
+      "- vol_blended: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000C72CCC0>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
       "2017-01-01    0.45\n",
       "2017-02-01    0.45\n",
       "2017-03-01    0.45\n",
       "2017-04-01    0.45\n",
       "Freq: MS, dtype: float64\n",
-      "- option_expiry: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000D617E80>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
+      "- option_expiry: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000CFE36D8>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
       "2017-01-01   2016-12-31\n",
       "2017-02-01   2017-01-31\n",
       "2017-03-01   2017-02-28\n",
       "2017-04-01   2017-03-31\n",
       "Freq: MS, dtype: datetime64[ns]\n",
       "## EUR\n",
-      "- price: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x0000000003DB6B00>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
+      "- price: CurveData: builder=<gazprom.mt.pricing.environment.data_builders.DefaultDataBuilder object at 0x000000000C758668>, allow_negative=False, is_corr=False, data_args={'builder': 'default'}, data:\n",
       "2017-03-01    0.0245\n",
       "2017-03-02    0.0245\n",
       "2017-03-03    0.0245\n",
@@ -293,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -302,12 +334,12 @@
     "simulator_params = {'seed': 12321312, 'simulator': 'SimulatorOneFactor'}\n",
     "lsmc_params=dict(nsims_fwd=30000, nsims_bwd=30000)\n",
     "\n",
-    "res = payoff.pv_greeks(env, simulator_params=simulator_params, lsmc_params=lsmc_params, debug=True, intrinsic=False)"
+    "res = payoff.pv_greeks(env, simulator_params=simulator_params, lsmc_params=lsmc_params, debug=True, intrinsic=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -321,11 +353,9 @@
        " 'actions_paths',\n",
        " 'triggers',\n",
        " 'lsmc_mesh',\n",
-       " 'vega_monthly',\n",
        " 'fwd_sims',\n",
        " 'cash',\n",
        " 'actions',\n",
-       " 'vega_blended',\n",
        " 'spot_sims',\n",
        " 'delta',\n",
        " 'theta',\n",
@@ -333,7 +363,7 @@
        " 'cashflows']"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -352,10 +382,10 @@
     {
      "data": {
       "text/plain": [
-       "SV(      8.1025,     0.0161)"
+       "SV(      8.0962,     0.0000)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -383,19 +413,19 @@
        "2017-03-04  0.000000\n",
        "2017-03-05  0.000000\n",
        "2017-03-06  0.000000\n",
-       "2017-03-07  0.509456\n",
+       "2017-03-07  0.479796\n",
        "2017-03-08  0.000000\n",
        "2017-03-09  0.000000\n",
        "2017-03-10  0.000000\n",
        "2017-03-11  0.000000\n",
        "2017-03-12  0.000000\n",
        "2017-03-13  0.000000\n",
-       "2017-03-14  0.150124\n",
+       "2017-03-14  0.134808\n",
        "2017-03-15  0.000000\n",
        "2017-03-16  0.000000\n",
        "2017-03-17  0.000000\n",
        "2017-03-18  0.000000\n",
-       "2017-03-19  0.339885\n",
+       "2017-03-19  0.384843\n",
        "2017-03-20  0.000000\n",
        "SVFrame.err:\n",
        "                  TTF\n",
@@ -412,16 +442,16 @@
        "2017-03-11  0.000000\n",
        "2017-03-12  0.000000\n",
        "2017-03-13  0.000000\n",
-       "2017-03-14  0.002020\n",
+       "2017-03-14  0.001870\n",
        "2017-03-15  0.000000\n",
        "2017-03-16  0.000000\n",
        "2017-03-17  0.000000\n",
        "2017-03-18  0.000000\n",
-       "2017-03-19  0.002864\n",
+       "2017-03-19  0.002971\n",
        "2017-03-20  0.000000"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +704,7 @@
     }
    ],
    "source": [
-    "res['price_model'].vol_model.terminal_vol(valuation_date, payoff.contract_dates, payoff.contract_dates + pd.DateOffset(0))"
+    "res['price_model'].vol_model.terminal_vol(valuation_date, payoff.contract_dates, payoff.contract_dates)"
    ]
   },
   {
